--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "ember-page-title": "^8.0.0",
     "ember-qunit": "^8.0.1",
     "ember-resolver": "^11.0.1",
-    "ember-source": "~5.2.0",
+    "ember-source": "~5.5.0-beta.2",
     "ember-template-lint": "^5.11.2",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
