Try to eliminate transpilation goofiness as a potential issue

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "decorator-transforms": "^1.0.1",
     "ember-template-imports": "^4.0.0"
   }
 }
